--- a/src/top-bar/top-bar.component.html
+++ b/src/top-bar/top-bar.component.html
@@ -4,7 +4,7 @@
   flex-md="50"
   flex-gt-sm="25"
   fxLayout.xs="column"
->
+  >
   <div class="navigation">
     <button mat-button [matMenuTriggerFor]="menu">
       <mat-icon>menu</mat-icon>
@@ -24,27 +24,21 @@
         </div>
       </ng-container>
     </mat-menu>
-
-   <div class="restaurant-title" (click)="loadHomePage()"> 
-  <img
-  class="restaurant-title"
-  src="/assets/images/SwapMe.png"
-  (click)="loadHomePage()"
-  (keydown)="loadHomePage()"
-  tabindex="0"
-  alt=""
-/>
- </div> 
+   
+    <img
+      class="restaurant-title"
+      src="/assets/images/SwapMe.png"
+      (click)="loadHomePage()"
+      (keydown)="loadHomePage()"
+      tabindex="0"
+      alt=""
+      />
+   
   </div>
-
-
 
   <div class="top-bar__search-content">
     <form [formGroup]="searchForm">
-      <mat-form-field
-        appearance="outline"
-        class="top-bar__search-content__search-field"
-      >
+      <mat-form-field appearance="outline">
         <input
           matInput
           type="text"
@@ -55,8 +49,8 @@
       </mat-form-field>
       <mat-form-field
         appearance="outline"
-        class="top-bar__search-content__search-field"
-      >
+        class="hideonphone"
+       >
         <input
           matInput
           type="text"
@@ -66,7 +60,7 @@
       </mat-form-field>
       <mat-form-field
         appearance="outline"
-        class="top-bar__search-content__search-field"
+        class="hideonphone"
        >
         <mat-select
           placeholder="Country"
@@ -89,7 +83,7 @@
       </mat-form-field>
       <mat-form-field
         appearance="outline"
-        class="top-bar__search-content__search-field"
+        class="hideonphone"
        >
         <mat-select
           multiple
