--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,37 +1,62 @@
+@import '../../styles.scss';
+
 :host {
   width: 540px;
   height: 400px;
 }
-.login-form {
-  margin: 0 auto;
-  text-align: center;
-  width: 450px;
-}
+
 .mat-mdc-form-field {
   width: 100%;
 }
 
 .login-window {
-  border-radius: 10px;
-  padding: 20px;
-}
+  display: grid;
+  justify-content:center ;
 
-.title {
-  margin: 20px 0;
-  text-align: center;
-  font: font(headline-1);
-}
-
-.buttons {
-  height: 50px;
-  margin-top: 40px;
-  display: flex;
-  margin-left: 50px;
-  button {
-    height: 45px;
-    width: 132px;
-    border-radius: 10px;
-    border: none;
-    margin-right: 12px;
+  .title {
+    margin: 40px 0;
+    font-size: xx-large;
+    white-space: nowrap;
+    text-align: center;
   }
+
+  .login-form {
+    text-align: center;
+    
+  }
+
+  .mdc-text-field{
+    border-radius: 100px;
+  }
+
+  .buttons {
+    height: 50px;
+    margin-top: 40px;
+    display: grid;
+    gap: 12px;
+
+    button {
+      height: 45px;
+      border-radius: 10px;
+      border: 0.5px solid;
+      border-color: #757575;
+    }
+  }
+  
 }
+
+// .mat-checkbox:hover{
+//   .mat-checkbox-frame{
+//     background-color: white;
+//   }
+// }
+
+.card-block{
+  align-content: center;
+  align-items: center;
+  display: flex;
+ 
+  justify-content: left;
+  padding: 16px;
+}
+
