--- a/src/share/style/core/core.scss
+++ b/src/share/style/core/core.scss
@@ -1,3 +1,3 @@
-@import "layout";
-@import "mark";
-//@import "mat-variable";
+@import "layout.scss";
+@import "mark.scss";
+@import "mat-variables.scss"; 
