--- a/src/share/style/material/mat-form-field.scss
+++ b/src/share/style/material/mat-form-field.scss
@@ -57,6 +57,7 @@ $matFormFieldHeight: 36px !default;
       .mdc-text-field--outlined {
         padding: 0 0 0 12px;
       }
+      
       .mat-mdc-text-field-wrapper {
         padding: 0;
       }
@@ -67,7 +68,6 @@ $matFormFieldHeight: 36px !default;
 
       .mat-mdc-form-field-icon-suffix > .mat-icon {
         padding: 0 8px 0 0;
-
         width: 20px;
         height: 20px;
       }
@@ -84,7 +84,7 @@ $matFormFieldHeight: 36px !default;
             color: transparent;
 
             svg {
-              fill: #757575;
+              fill: whitesmoke;
             }
           }
         }
@@ -101,9 +101,9 @@ $matFormFieldHeight: 36px !default;
             font-size: inherit;
             color: transparent;
 
-            svg {
-              fill: #757575;
-            }
+            // svg {
+            //   fill: #757575;
+            // }
           }
         }
       }
@@ -121,17 +121,19 @@ $matFormFieldHeight: 36px !default;
       .mat-mdc-form-field-flex {
         background-color: color(accent, 100);
       }
+      
     }
 
     .mat-mdc-form-field-infix {
       min-height: $matFormFieldHeight;
       padding: 12px;
       margin-top: -5px;
-      //display: flex;
+      display: flex;
       align-items: center;
 
       textarea.mat-mdc-input-element {
         padding: 0;
+        
       }
 
       .loader {
@@ -143,10 +145,11 @@ $matFormFieldHeight: 36px !default;
     .mat-mdc-form-field-flex {
       padding: 0;
       height: 100%;
-
+      
       .mdc-notched-outline {
         top: 0px;
         height: 36px; //calc(100% - 20px);
+      
       }
 
       label {
@@ -165,6 +168,7 @@ $matFormFieldHeight: 36px !default;
 
     .mat-mdc-text-field-wrapper.mdc-text-field .mdc-notched-outline__notch {
       border-top: inherit;
+      
     }
 
     .mdc-text-field--outlined,
@@ -180,7 +184,39 @@ $matFormFieldHeight: 36px !default;
     .mat-mdc-form-field-subscript-wrapper {
       height: 20px;
     }
+
   }
+
+  // Customization for appearance="outlined" fields
+  .mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-notched-outline .mdc-notched-outline__leading, .mdc-notched-outline__trailing {
+    border: 0;
+  }
+
+  .mdc-text-field--outlined {
+    background-color: #fff !important;
+    height: 40px;
+    border-radius: 50px;
+    border:1px solid;
+    border-color: #757575;
+
+    .mat-mdc-form-field-flex .mat-mdc-form-field-infix {
+     
+      /* Input text color and font size customization */
+      .mdc-text-field__input {
+        color: #757575;
+     
+      }
+    }
+  
+    /* On hover, change the background color */
+    .mat-mdc-form-field-focus-overlay {
+      background-color: green !important;
+    }
+ 
+
+  }
+  
+
 
   .mat-mdc-text-field-wrapper .mat-mdc-form-field-input-control {
     line-height: 20px;
@@ -189,5 +225,17 @@ $matFormFieldHeight: 36px !default;
   textarea.mat-mdc-input-element {
     padding: 12px 0;
     resize: none;
+    
   }
+}
+
+
+
+@media only screen and (max-width: 425px) {
+  
+  .mdc-text-field--outlined
+    {
+        width: calc(45vw);
+        height: 32px;
+    }
 }
